--- a/GranatProject2/GranatProject2.vcxproj
+++ b/GranatProject2/GranatProject2.vcxproj
@@ -85,6 +85,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="UnitObjectClass.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="UnitObjectClass.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="vpproject\GranatProject2.vpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
