--- a/GranatProject2/GranatProject2.vcxproj
+++ b/GranatProject2/GranatProject2.vcxproj
@@ -85,9 +85,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MapConteinerClass.cpp" />
     <ClCompile Include="UnitObjectClass.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MapConteinerClass.h" />
+    <ClInclude Include="TerrainObjectClass.h" />
     <ClInclude Include="UnitObjectClass.h" />
   </ItemGroup>
   <ItemGroup>
