Editing Tiles upload method, dont work

--- a/GranatProject2/GranatProject2.vcxproj
+++ b/GranatProject2/GranatProject2.vcxproj
@@ -84,13 +84,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GridShapeContainer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapConteinerClass.cpp" />
+    <ClCompile Include="TerrainObjectClass.cpp" />
+    <ClCompile Include="TileSetClass.cpp" />
     <ClCompile Include="UnitObjectClass.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GridShapeContainer.h" />
+    <ClInclude Include="HeaderAndStructures.h" />
     <ClInclude Include="MapConteinerClass.h" />
     <ClInclude Include="TerrainObjectClass.h" />
+    <ClInclude Include="TileSetClass.h" />
     <ClInclude Include="UnitObjectClass.h" />
   </ItemGroup>
   <ItemGroup>
