--- a/GranatProject2/GranatProject2.vcxproj.filters
+++ b/GranatProject2/GranatProject2.vcxproj.filters
@@ -32,9 +32,6 @@
     <ClCompile Include="UnitObjectClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MapConteinerClass.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="TerrainObjectClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -44,12 +41,12 @@
     <ClCompile Include="GridShapeContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MapContainerClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UnitObjectClass.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MapConteinerClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TerrainObjectClass.h">
@@ -62,6 +59,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HeaderAndStructures.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MapContainerClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
