--- a/GranatProject2/GranatProject2.vcxproj.filters
+++ b/GranatProject2/GranatProject2.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="GameViewUnitContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AnimationSetContainer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UnitObjectClass.h">
@@ -80,6 +83,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameViewUnitContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimationSetContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
