Unit drawing was added, it don't work

--- a/GranatProject2/GranatProject2.vcxproj.filters
+++ b/GranatProject2/GranatProject2.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="AnimationSetContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MapDisplayEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UnitObjectClass.h">
@@ -86,6 +89,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AnimationSetContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MapDisplayEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
