--- a/GranatProject2/GranatProject2.vcxproj
+++ b/GranatProject2/GranatProject2.vcxproj
@@ -91,6 +91,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AnimationSetContainer.cpp" />
+    <ClCompile Include="MapDisplayEngine.cpp" />
     <ClCompile Include="GameCoord.cpp" />
     <ClCompile Include="GameImageClass.cpp" />
     <ClCompile Include="GameViewUnitContainer.cpp" />
@@ -103,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimationSetContainer.h" />
+    <ClInclude Include="MapDisplayEngine.h" />
     <ClInclude Include="GameCoord.h" />
     <ClInclude Include="GameImageClass.h" />
     <ClInclude Include="GameViewUnitContainer.h" />
