--- a/GranatProject2/GranatProject2.vcxproj
+++ b/GranatProject2/GranatProject2.vcxproj
@@ -90,6 +90,7 @@
     </QtMoc>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AnimationSet.cpp" />
     <ClCompile Include="AnimationSetContainer.cpp" />
     <ClCompile Include="MapDisplayEngine.cpp" />
     <ClCompile Include="GameCoord.cpp" />
@@ -103,6 +104,7 @@
     <ClCompile Include="UnitObjectClass.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AnimationSet.h" />
     <ClInclude Include="AnimationSetContainer.h" />
     <ClInclude Include="MapDisplayEngine.h" />
     <ClInclude Include="GameCoord.h" />
